--- a/wp-content/themes/storefront/style.css
+++ b/wp-content/themes/storefront/style.css
@@ -685,7 +685,7 @@ a {
     width: 21.7391304348%;
     float: left;
     margin-right: 4.347826087%;
-    height:10px
+    height:10px;
     clear: both; }
     .site-header .site-branding img, .site-header .site-logo-anchor img, .site-header .site-logo-link img {
       height: auto;
