adjust UI for fooder

--- a/wp-content/themes/storefront/style.css
+++ b/wp-content/themes/storefront/style.css
@@ -430,7 +430,8 @@ body {
     color: #96588a; }
 
 .site-info {
-  padding: 2.618em 0; }
+  padding: 2.618em 0; 
+  padding-left: 300px;  }
 
 /**
  * Alignment
